# anthology-of-algorithms-and-data-structures

./: CMakeLists.txt  LICENSE  MyC++TemplateForOnlineContest.cpp  MyTemplate_for_online_contests.cpp  README.md  README.md~
1.Data-Structures/: 1.1.UnionFindDisjointSets.cpp
5.String-Processing/: KMP.cpp  Trie.cpp
6.Geometry/: 6.1.Point.cpp
9.Miscellaneous/: .bashrc  .emacs  FastIO.cpp  Gcd-Lcm.cpp  Indexed-Associative-Containers.cpp  Modular-Calculations.cpp  Next-Prev-Greater-Smaller-Element[using_stack].cpp  Overloaded-Operators-To-Accept-128Bit-Integer.cpp  PRNG.cpp  stress_test.cpp
Assignment-1/: Animal.h  board.h  farmAnimals.cpp  main.cpp
Data-Structures/: UnionFindDisjointSets.cpp  UnionFindDisjointSets.cpp~
Geometry/: Point.cpp
Graph-Theory/: Adjacency_list_using_Linkedlist.cpp  BiPartiteGraph.cpp  CycleDetection[DirectedGraph_dfs].cpp  CycleDetection[UndirectedGraph_dfs].cpp  CycleDetection[undirectedGraph_dfs].cpp  EdgeClassification.cpp  FloodFill.cpp  NumberOfCCs[ForestTree].cpp  NumberOfCCs[UndirectedGraph].cpp  NumberOfComponents[ForestTree].cpp  NumberOfComponents[undirectedGraph].cpp  TopologicalOrder.cpp  TreeDiameter.cpp  VertexCover.cpp  topological_sort[DFS].cpp  topological_sort[KahnsAlgorithm].cpp
Miscellaneous/: Double-Comparison.cpp  Gcd-Lcm.cpp  Indexed-Associative-Containers.cpp  Modular-Calculations.cpp  MyDebugger.cpp  Next-Prev-Greater-Smaller-Element[stack].cpp  Next-Prev-Greater-Smaller-Element[using_stack].cpp  Num-Subarray-Product-Less-than-K[Two-Pointers].cpp  Overloaded-Operators-To-Accept-128Bit-Integer.cpp  Template.cpp  (+1 more)
(+280 files in other folders)
